src/objects/pse__Practice_Plan__c.object
<CustomObject>
    <customHelpPage>pse__PracticePlanHelp</customHelpPage>
    <description>Captures planned bookings, billings, costs, margin, revenue, and utilization for the practice over a defined time period. Apart from services forecasting, fields on this object are not validated (other than for format) or used in any formulae. Practices and time periods have a master-detail relationship with practice plans.</description>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Billings__c</fullName>
        <label>Planned Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bookings__c</fullName>
        <label>Planned Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_External_Costs__c</fullName>
        <label>Planned External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Internal_Costs__c</fullName>
        <label>Planned Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Margin__c</fullName>
        <formula>pse__Planned_Billings__c - pse__Planned_External_Costs__c - pse__Planned_Internal_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Utilization__c</fullName>
        <label>Planned Utilization</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Owner__c</fullName>
        <formula>pse__Practice__r.pse__Practice_Head__r.FirstName &amp; &quot; &quot; &amp; pse__Practice__r.pse__Practice_Head__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Plan_For__c</fullName>
        <description>Concatenated Practice and Time Period Names (with a hyphen, &apos; - &apos;, in between).</description>
        <formula>pse__Practice__r.Name &amp; &apos; - &apos; &amp; pse__Time_Period__r.Name</formula>
        <label>Practice Plan For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Practice Plans</relationshipLabel>
        <relationshipName>Practice_Plans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Type__c</fullName>
        <formula>TEXT(pse__Time_Period__r.pse__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Practice Plans</relationshipLabel>
        <relationshipName>Practice_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique system field: concatenation of Practice and Time Period IDs with a hyphen (&apos;-&apos;) in between</description>
        <inlineHelpText>Unique system field: concatenation of Practice and Time Period IDs with a hyphen (&apos;-&apos;) in between</inlineHelpText>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Practice Plan</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Practice_Plan_For__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Practice_Owner__c</columns>
        <columns>pse__Time_Period__c</columns>
        <columns>pse__Time_Period_Type__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Planned_Bookings__c</columns>
        <columns>pse__Planned_Billings__c</columns>
        <columns>pse__Planned_Revenue__c</columns>
        <columns>pse__Planned_Internal_Costs__c</columns>
        <columns>pse__Planned_External_Costs__c</columns>
        <columns>pse__Planned_Margin__c</columns>
        <columns>pse__Planned_Utilization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{0}</displayFormat>
        <label>Practice Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Plan_must_have_same_currency_as_Practice</fullName>
        <active>true</active>
        <description>A Practice Plan record must use the same currency as its parent Practice.</description>
        <errorConditionFormula>NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Practice__r.CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>A Practice Plan record must use the same currency as its parent Practice.</errorMessage>
    </validationRules>
</CustomObject>